<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bluetooth_pair_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_bluetooth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:flow_horizontalBias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_top_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/top_bg"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_phone"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/ic_phone"
        app:flow_horizontalBias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_top_background"
        app:layout_constraintVertical_bias="0.04000002" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_device"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/ic_device"
        app:flow_horizontalBias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_top_background"
        app:layout_constraintVertical_bias="0.04000002" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30_dp"
        android:scaleType="centerInside"
        android:src="@drawable/img_sign_up_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screening_process"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_logo"
        app:layout_constraintEnd_toStartOf="@+id/img_home"
        app:layout_constraintStart_toEndOf="@+id/img_logo"
        app:layout_constraintTop_toTopOf="@+id/img_logo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_top_home"
        app:layout_constraintBottom_toBottomOf="@+id/img_logo"
        app:layout_constraintEnd_toEndOf="@+id/img_top_background"
        app:layout_constraintTop_toTopOf="@+id/img_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_home"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_logo"
        app:layout_constraintEnd_toEndOf="@+id/img_home"
        app:layout_constraintStart_toStartOf="@+id/img_home"
        app:layout_constraintTop_toBottomOf="@+id/img_home" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_bottom_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bottom_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.95" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_device_bluetooth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:flow_horizontalBias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71000004" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_inst_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_on_the_bluetooth_connection_amp_n_pair_the_br_scan_light_device_with_phone"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_phone"
        app:layout_constraintVertical_bias="0.07999998" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_sign_in_bg"
        android:padding="@dimen/padding_10dp"
        android:text="@string/connect_to_bluetooth"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/img_bottom_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_bluetooth"
        app:layout_constraintVertical_bias="0.15" />


</androidx.constraintlayout.widget.ConstraintLayout>